Home Section alignment fixed proper

--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -29,7 +29,7 @@ hr {
 .imgdiv {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 5px;
 }
 section {
   width: 100%;
